--- a/ultralytics/cfg/models/Test/swin_dwc3k2_eca_bifpn_eca_head.yaml
+++ b/ultralytics/cfg/models/Test/swin_dwc3k2_eca_bifpn_eca_head.yaml
@@ -78,16 +78,21 @@ head:
 
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
   - [[-1, 42], 1, Concat, [1]] # 53
-  - [-1, 3, DWC3k2_Attn, [256]] # 54
+  - [-1, 3, DWC3k2, [256]] # 54
+  - [-1, 1, ECA, []] # 55
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55
-  - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56
-  - [-1, 3, DWC3k2_Attn, [512, True]] # 57
+  # - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55  56
+  - [54, 1, nn.Upsample, [None, 0.5, "nearest"]] #55  56
+  - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56  57
+  - [-1, 3, DWC3k2, [512, True]] # 57  58
+  - [-1, 1, ECA, []] #59
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58
-  - [[-1, 48], 1, Concat, [1]] # 59
-  - [-1, 3, DWC3k2_Attn, [1024, True]] # 60
+  # - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58  60
+  - [58, 1, nn.Upsample, [None, 0.5, "nearest"]] #58  60
+  - [[-1, 48], 1, Concat, [1]] # 59  61
+  - [-1, 3, DWC3k2, [1024, True]] # 60  62
+  - [-1, 1, ECA, []] #63
 
-  - [[54, 57, 60], 1, Detect, [nc]] # 61
-  # - [[61, 62, 63], 1, Detect, [nc]] # 61
+  # - [[54, 57, 60], 1, Detect, [nc]] # 61  64
+  - [[55, 59, 63], 1, Detect, [nc]] # 61
 # 
