--- a/ultralytics/cfg/models/Test/concat_After_BIFPN.yaml
+++ b/ultralytics/cfg/models/Test/concat_After_BIFPN.yaml
@@ -79,16 +79,16 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
   - [[-1, 42], 1, Concat, [1]] # 53
   - [-1, 3, DWC3k2, [256]] # 54
-  - [[-1, 20], 1, Concat, [1]] #55
+  - [[-1, 20], 1, ScaledConcat, [1]] #55
 
   - [54, 1, nn.Upsample, [None, 0.5, "nearest"]] #55  56
   - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56  57
   - [-1, 3, DWC3k2, [512, True]] # 57  58
-  - [[-1, 22], 1, Concat, [1]] #59
+  - [[-1, 22], 1, ScaledConcat, [1]] #59
 
   - [58, 1, nn.Upsample, [None, 0.5, "nearest"]] #58  60
   - [[-1, 48], 1, Concat, [1]] # 59  61
   - [-1, 3, DWC3k2, [1024, True]] # 60  62
-  - [[-1, 24], 1, Concat, [1]] #63
+  - [[-1, 24], 1, ScaledConcat, [1]] #63
 
   - [[55, 59, 63], 1, Detect, [nc]] # 61  64
