--- a/ultralytics/cfg/models/Test/concat_After_BIFPN.yaml
+++ b/ultralytics/cfg/models/Test/concat_After_BIFPN.yaml
@@ -79,16 +79,19 @@ head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
   - [[-1, 42], 1, Concat, [1]] # 53
   - [-1, 3, DWC3k2, [256]] # 54
-  - [[-1, 20], 1, ScaledConcat, [1]] #55
+  - [[-1, 20], 1, Concat, [1]] #55
+  - [-1, 1, Conv, [256]] #56
 
-  - [54, 1, nn.Upsample, [None, 0.5, "nearest"]] #55  56
-  - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56  57
-  - [-1, 3, DWC3k2, [512, True]] # 57  58
-  - [[-1, 22], 1, ScaledConcat, [1]] #59
+  - [54, 1, nn.Upsample, [None, 0.5, "nearest"]] #55  56  57
+  - [[-1, 51, 45], 1, BiFPN_Concat3, [1]] # 56  57  58
+  - [-1, 3, DWC3k2, [512, True]] # 57  58  59
+  - [[-1, 22], 1, Concat, [1]] #59  60
+  - [-1, 1, Conv, [512]] #61
 
-  - [58, 1, nn.Upsample, [None, 0.5, "nearest"]] #58  60
-  - [[-1, 48], 1, Concat, [1]] # 59  61
-  - [-1, 3, DWC3k2, [1024, True]] # 60  62
-  - [[-1, 24], 1, ScaledConcat, [1]] #63
+  - [58, 1, nn.Upsample, [None, 0.5, "nearest"]] #58  60  62
+  - [[-1, 48], 1, Concat, [1]] # 59  61  63
+  - [-1, 3, DWC3k2, [1024, True]] # 60  62  64
+  - [[-1, 24], 1, Concat, [1]] #63  65
+  - [-1, 1, Conv, [1024]] # 66
 
-  - [[55, 59, 63], 1, Detect, [nc]] # 61  64
+  - [[56, 61, 66], 1, Detect, [nc]] # 61  64
