--- a/ultralytics/cfg/models/Test/BiFPN_with_Concat_ONLY.yaml
+++ b/ultralytics/cfg/models/Test/BiFPN_with_Concat_ONLY.yaml
@@ -83,12 +83,12 @@ head:
   - [-1, 3, DWC3k2, [256]] # 54 56
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55 57
-  - [[-1, 53], 1, Concat, [1]] # 56 58
-  - [[-1, 47], 1, Concat, [1]] # 56 59
+  - [[-1, 53, 47], 1, Concat, [1]] # 56 58
+  # - [[-1, 47], 1, Concat, [1]] # 56 59
   - [-1, 3, DWC3k2, [512, True]] # 57 60
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58 61
   - [[-1, 50], 1, Concat, [1]] # 59 62
   - [-1, 3, DWC3k2, [1024, True]] # 60 63
 
-  - [[56, 60, 63], 1, Detect, [nc]] # 61 64
+  - [[56, 59, 62], 1, Detect, [nc]] # 61 64
