--- a/ultralytics/cfg/models/Test/BiFPN_with_Concat_ONLY.yaml
+++ b/ultralytics/cfg/models/Test/BiFPN_with_Concat_ONLY.yaml
@@ -47,48 +47,45 @@ head:
   - [-1, 3, DWC3k2, [256]] # 30
 
   - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #31
-  - [[-1, 27], 1, Concat, [1]] # 32
-  - [[-1, 22], 1, Concat, [1]] # 32 33
-  - [-1, 3, DWC3k2, [512, True]] # 33 34
+  - [[-1, 27, 22], 1, Concat, [1]] # 32
+  - [-1, 3, DWC3k2, [512, True]] # 33
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #34 35
-  - [[-1, 24], 1, Concat, [1]] # 35 36
-  - [-1, 3, DWC3k2, [1024, True]] # 36 37
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #34
+  - [[-1, 24], 1, Concat, [1]] # 35
+  - [-1, 3, DWC3k2, [1024, True]] # 36
 
 #BiFPN Block 2
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37 38
-  - [[-1, 34], 1, Concat, [1]] # 38 39
-  - [-1, 3, DWC3k2, [512]] # 39 40
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #37
+  - [[-1, 33], 1, Concat, [1]] # 38
+  - [-1, 3, DWC3k2, [512]] # 39
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #40 41
-  - [[-1, 30], 1, Concat, [1]] # 41 42
-  - [-1, 3, DWC3k2, [256]] # 42 43
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #40
+  - [[-1, 30], 1, Concat, [1]] # 41
+  - [-1, 3, DWC3k2, [256]] # 42
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #43 44
-  - [[-1, 40], 1, Concat, [1]] # 44 45
-  - [[-1, 34], 1, Concat, [1]] # 44 46
-  - [-1, 3, DWC3k2, [512, True]] # 45 47
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #43
+  - [[-1, 39, 33], 1, Concat, [1]] # 44
+  - [-1, 3, DWC3k2, [512, True]] # 45
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #46 48
-  - [[-1, 37], 1, Concat, [1]] # 47 49
-  - [-1, 3, DWC3k2, [1024, True]] # 48 50
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #46
+  - [[-1, 36], 1, Concat, [1]] # 47
+  - [-1, 3, DWC3k2, [1024, True]] # 48
 
 #BiFPN BLock 3
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #49 51
-  - [[-1, 47], 1, Concat, [1]] # 50 52
-  - [-1, 3, DWC3k2, [512]] # 51 53
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #49
+  - [[-1, 45], 1, Concat, [1]] # 50
+  - [-1, 3, DWC3k2, [512]] # 51
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52 54
-  - [[-1, 43], 1, Concat, [1]] # 53 55
-  - [-1, 3, DWC3k2, [256]] # 54 56
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #52
+  - [[-1, 42], 1, Concat, [1]] # 53
+  - [-1, 3, DWC3k2, [256]] # 54
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55 57
-  - [[-1, 53, 47], 1, Concat, [1]] # 56 58
-  # - [[-1, 47], 1, Concat, [1]] # 56 59
-  - [-1, 3, DWC3k2, [512, True]] # 57 60
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #55
+  - [[-1, 51, 45], 1, Concat, [1]] # 56
+  - [-1, 3, DWC3k2, [512, True]] # 57
 
-  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58 61
-  - [[-1, 50], 1, Concat, [1]] # 59 62
-  - [-1, 3, DWC3k2, [1024, True]] # 60 63
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]] #58
+  - [[-1, 48], 1, Concat, [1]] # 59
+  - [-1, 3, DWC3k2, [1024, True]] # 60
 
-  - [[56, 59, 62], 1, Detect, [nc]] # 61 64
+  - [[54, 57, 60], 1, Detect, [nc]] # 61
