--- a/ultralytics/cfg/models/v8/yolo_ViT.yaml
+++ b/ultralytics/cfg/models/v8/yolo_ViT.yaml
@@ -1,5 +1,5 @@
 nc: 1
 backbone:
-  - [-1, 1, TorchVision, [768, "convnext_tiny", "DEFAULT", True, 2, False]]
+  - [-1, 1, TorchVision, [768, "alexnet", "DEFAULT", True, 2, False]]
 head:
   - [-1, 1, nn.Identity, []]
