--- a/ultralytics/cfg/models/v8/yolo_ViT.yaml
+++ b/ultralytics/cfg/models/v8/yolo_ViT.yaml
@@ -1,5 +1,25 @@
 nc: 1
 backbone:
-  - [-1, 1, TorchVision, [256, "alexnet", "DEFAULT", True, 0, True]]
+  - [-1, 1, TorchVision, [256, "alexnet", "DEFAULT", True, 2, True]] #0
+  - [0, 1, Index, [192, 5]] #192, 79, 79 #1
+  - [0, 1, Index, [384, 8]] #384, 39, 39 #2
+  - [0, 1, Index, [364, 8]] #256, 19, 19  #3                                    
 head:
-  - [-1, 1, nn.Identity, []]
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 192, 38, 38
+  - [-1, 1, Conv, [192, 3, 1, 1]] #192, 39, 39
+  - [[-1, 2], 1, Concat, [1]] # cat backbone P4
+  - [-1, 3, C3k2, [512]] # 12
+
+  # - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
+  # - [[-1, 4], 1, Concat, [1]] # cat backbone P3
+  # - [-1, 3, C3k2, [256]] # 15 (P3/8-small)
+
+  # - [-1, 1, DepthwiseConvBlock, [256, 3, 2]]
+  # - [[-1, 12], 1, Concat, [1]] # cat head P4
+  # - [-1, 3, C3k2, [512, True]] # 18 (P4/16-medium)
+
+  # - [-1, 1, DepthwiseConvBlock, [512, 3, 2]]
+  # - [[-1, 9], 1, Concat, [1]] # cat head P5
+  # - [-1, 3, C3k2, [1024, True]] # 21 (P5/32-large)
+
+  - [[12, 12, 12], 1, Detect, [nc]] # Detect(P3, P4, P5)
