--- a/ultralytics/cfg/models/v8/yolo_ViT.yaml
+++ b/ultralytics/cfg/models/v8/yolo_ViT.yaml
@@ -9,8 +9,9 @@ backbone:
 
 head:
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #4
-  - [[-1, 2], 1, Concat, [1]] # 5
-  - [-1, 3, C2f, [512]] # 6
+  - [-1, 1, Conv, [192, 3, 1, 1]] #192, 39, 39 #5
+  - [[-1, 2], 1, Concat, [1]] # 6
+  - [-1, 3, C2f, [512]] # 7
 
   # - [-1, 1, nn.Upsample, [None, 2, "nearest"]]
   # - [[-1, 4], 1, Concat, [1]] # cat backbone P3
@@ -24,7 +25,7 @@ head:
   # - [[-1, 9], 1, Concat, [1]] # cat head P5
   # - [-1, 3, C2f, [1024]] # 21 (P5/32-large)
 
-  - [[6, 6, 6], 1, Detect, [nc]] # Detect(P3, P4, P5)
+  - [[1, 2, 7], 1, Detect, [nc]] # Detect(P3, P4, P5)
 # head:
 #   - [-1, 1, nn.Upsample, [None, 2, "nearest"]] # 192, 38, 38
 #   - [-1, 1, Conv, [192, 3, 1, 1]] #192, 39, 39
