--- a/ultralytics/cfg/models/v8/yolo_ViT.yaml
+++ b/ultralytics/cfg/models/v8/yolo_ViT.yaml
@@ -1,6 +1,6 @@
 nc: 1
-scale: 
-  n: [0.33, 0.25, 1024]
+# scale: 
+  # n: [0.33, 0.25, 1024]
 backbone:
   - [-1, 1, TorchVision, [256, "alexnet", "DEFAULT", True, 2, True]] #0
   - [0, 1, Index, [192, 5]] #192, 79, 79 #1
