--- a/ultralytics/cfg/models/11/cnntrack.yaml
+++ b/ultralytics/cfg/models/11/cnntrack.yaml
@@ -1,60 +1,41 @@
-# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license
-
-# Ultralytics YOLO11 object detection model with P3/8 - P5/32 outputs
-# Model docs: https://docs.ultralytics.com/models/yolo11
-# Task docs: https://docs.ultralytics.com/tasks/detect
-
+# Ultralytics YOLO11 object detection model with Swin-T backbone
 # Parameters
-nc: 80 # number of classes
-scales: # model compound scaling constants, i.e. 'model=yolo11n.yaml' will call yolo11.yaml with scale 'n'
-  # [depth, width, max_channels]
-  # n: [0.50, 0.25, 1024] # summary: 319 layers, 2624080 parameters, 2624064 gradients, 6.6 GFLOPs
-  # s: [0.50, 0.50, 1024] # summary: 319 layers, 9458752 parameters, 9458736 gradients, 21.7 GFLOPs
-  m: [0.50, 1.00, 512] # summary: 409 layers, 20114688 parameters, 20114672 gradients, 68.5 GFLOPs
-  # l: [1.00, 1.00, 512] # summary: 631 layers, 25372160 parameters, 25372144 gradients, 87.6 GFLOPs
-  # x: [1.00, 1.50, 512] # summary: 631 layers, 56966176 parameters, 56966160 gradients, 196.0 GFLOPs
+nc: 80  # number of classes
+scales:
+  m: [0.50, 1.00, 512]  # using medium scale
 
-# YOLO11n backbone
+# Backbone with Swin-T
 backbone:
-  # # [from, repeats, module, args]
-  # - [-1, 1, Conv, [64, 3, 2]] # 0-P1/2
-  # - [-1, 1, Conv, [128, 3, 2]] # 1-P2/4
-  # - [-1, 2, DWC3k2, [256, False, 0.25]]
-  # - [-1, 1, Conv, [256, 3, 2]] # 3-P3/8
-  # - [-1, 2, DWC3k2, [512, False, 0.25]]
-  # - [-1, 1, Conv, [512, 3, 2]] # 5-P4/16
-  # - [-1, 2, DWC3k2, [512, True]]
-  # - [-1, 1, Conv, [1024, 3, 2]] # 7-P5/32
-  # - [-1, 2, DWC3k2, [1024, True]]
-  # - [-1, 1, SPPF, [1024, 5]] # 9
-  # - [-1, 2, C2PSA, [1024]] # 10
-    # [from, repeats, module, args]
-  - [-1, 1, TorchVision, [768, swin_t, DEFAULT, True, 5, True]]    # 0 - Swin-T (truncated, split)
-  # Extract feature maps at different scales
-  - [0, 1, Index, [192, 4]]                                        # 1 - P3/8  (B, 80, 80, 192)
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 2 - P3/8  (B, 192, 80, 80)
-  - [0, 1, Index, [384, 6]]                                        # 3 - P4/16 (B, 40, 40, 384)
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 4 - P4/16 (B, 384, 40, 40)
-  - [0, 1, Index, [768, 8]]                                        # 5 - P5/32 (B, 20, 20, 768)
-  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]                               # 6 - P5/32 (B, 768, 20, 20)
-  - [-1, 1, SPPF, [768, 5]]                                        # 7 - P5/32 (B, 768, 20, 20)
+  - [-1, 1, TorchVision, [768, swin_t, DEFAULT, True, 5, True]]    # 0 - Swin-T
+  - [0, 1, Index, [192, 4]]                                        # 1 - P3/8 (192 channels)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]               # 2 - Permute
+  - [0, 1, Index, [384, 6]]                                        # 3 - P4/16 (384 channels)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]               # 4 - Permute
+  - [0, 1, Index, [768, 8]]                                        # 5 - P5/32 (768 channels)
+  - [-1, 1, torchvision.ops.Permute, [[0, 3, 1, 2]]]               # 6 - Permute
+  - [-1, 1, SPPF, [768, 5]]                                        # 7 - SPPF
 
-# YOLO11n head
+# Head
 head:
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #8
-  - [[-1, 4], 1, Concat, [1]] # cat backbone P4 #9
-  - [-1, 2, C3k2, [512, False]] # 13  10
+  # First upsample and concat (P5 -> P4)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]                     # 8
+  - [[-1, 4], 1, Concat, [1]]                                      # 9 (concat with layer 4)
+  - [-1, 2, C3k2, [512, False]]                                    # 10
 
-  - [-1, 1, nn.Upsample, [None, 2, "nearest"]] #14
-  - [[-1, 2], 1, Concat, [1]] # cat backbone P3 #15
-  - [-1, 2, C3k2, [256, False]] # 16 (P3/8-small)  17
+  # Second upsample and concat (P4 -> P3)
+  - [-1, 1, nn.Upsample, [None, 2, "nearest"]]                     # 11
+  - [[-1, 2], 1, Concat, [1]]                                      # 12 (concat with layer 2)
+  - [-1, 2, C3k2, [256, False]]                                    # 13 (P3/8)
 
-  - [-1, 1, Conv, [256, 3, 2]] #18
-  - [[-1, 10], 1, Concat, [1]] # cat head P4  19
-  - [-1, 2, C3k2, [512, False]] # 19 (P4/16-medium)  20
+  # First downsample and concat (P3 -> P4)
+  - [-1, 1, Conv, [256, 3, 2]]                                     # 14
+  - [[-1, 10], 1, Concat, [1]]                                     # 15 (concat with layer 10)
+  - [-1, 2, C3k2, [512, False]]                                    # 16 (P4/16)
 
-  - [-1, 1, Conv, [512, 3, 2]] #21
-  - [[-1, 6], 1, Concat, [1]] # cat head P5  22
-  - [-1, 2, C3k2, [1024, True]] # 22 (P5/32-large)  23
+  # Second downsample and concat (P4 -> P5)
+  - [-1, 1, Conv, [512, 3, 2]]                                     # 17
+  - [[-1, 7], 1, Concat, [1]]                                      # 18 (concat with layer 7)
+  - [-1, 2, C3k2, [1024, True]]                                    # 19 (P5/32)
 
-  - [[17, 20, 23], 1, Detect, [nc]] # Detect(P3, P4, P5)  24
+  # Detect layer
+  - [[13, 16, 19], 1, Detect, [nc]]                                # 20 (Detect(P3, P4, P5))
