--- a/ultralytics/cfg/models/11/cnntrack.yaml
+++ b/ultralytics/cfg/models/11/cnntrack.yaml
@@ -20,22 +20,22 @@ head:
   # First upsample and concat (P5 -> P4)
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]                     # 8
   - [[-1, 4], 1, Concat, [1]]                                      # 9 (concat with layer 4)
-  - [-1, 2, DWC3k2, [512, False]]                                    # 10
+  - [-1, 2, C3k2, [512, False]]                                    # 10
 
   # Second upsample and concat (P4 -> P3)
   - [-1, 1, nn.Upsample, [None, 2, "nearest"]]                     # 11
   - [[-1, 2], 1, Concat, [1]]                                      # 12 (concat with layer 2)
-  - [-1, 2, DWC3k2, [256, False]]                                    # 13 (P3/8)
+  - [-1, 2, C3k2, [256, False]]                                    # 13 (P3/8)
 
   # First downsample and concat (P3 -> P4)
-  - [-1, 1, Conv, [256, 3, 2]]                                     # 14
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]]                                     # 14
   - [[-1, 10], 1, Concat, [1]]                                     # 15 (concat with layer 10)
-  - [-1, 2, DWC3k2, [512, False]]                                    # 16 (P4/16)
+  - [-1, 2, C3k2, [512, False]]                                    # 16 (P4/16)
 
   # Second downsample and concat (P4 -> P5)
-  - [-1, 1, Conv, [512, 3, 2]]                                     # 17
+  - [-1, 1, nn.Upsample, [None, 0.5, "nearest"]]                                     # 17
   - [[-1, 7], 1, Concat, [1]]                                      # 18 (concat with layer 7)
-  - [-1, 2, DWC3k2, [1024, True]]                                    # 19 (P5/32)
+  - [-1, 2, C3k2, [1024, True]]                                    # 19 (P5/32)
 
   # Detect layer
   - [[13, 16, 19], 1, Detect, [nc]]                                # 20 (Detect(P3, P4, P5))
