--- a/ultralytics/cfg/datasets/dfs.yaml
+++ b/ultralytics/cfg/datasets/dfs.yaml
@@ -1,7 +1,7 @@
 path: /kaggle/input/dfs-remapped/DFS-Fire.v4i.yolov11 #root dir
 #path: /kaggle/working/data #root dir
 train: train/images
-valid: val/images
+val: valid/images
 test: test/images
 
 names:
